# caqr

./: README.md  makefile.tbm25
src/: CMakeLists.txt  common.c  common.h  tsqr.c  tsqr.h  tsqrAllReduction.c  tsqrAllReduction.h
